--- a/index.html
+++ b/index.html
@@ -109,6 +109,10 @@
             <P>This will have gray background.</P>
         </section>
 
+        <hr>
+        
+        <h2>@footer</h2>
+
         <footer>
             <div>Some small heading inside footer</div>
             <ul>
