CSS: import and selectors

--- a/index.html
+++ b/index.html
@@ -5,10 +5,24 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Component Library</title>
+
+
+    <!-- CSS WAY 1: STYLE TAG -->
+    <!-- <style>
+        body{
+            color:red;
+        }
+    </style> -->
+    <!-- THIRD WAY OF DOING CSS: EXTERNAL LINK -->
+    <link href="styles.css" rel="stylesheet"/> 
+
 </head>
+
+
 <body>
-    <h1>Nisargi Marathe's Component Library</h1>
-    <p>I am attending neog.camp and I want to make a library which would make all my projects look good and consistent.</p>
+    <h1 id="lib-header">Nisargi Marathe's Component Library</h1>
+    <!-- style=color:red" -->
+    <p class="para">I am attending neog.camp and I want to make a library which would make all my projects look good and consistent.</p>
 
     <hr>
 
@@ -24,7 +38,7 @@
     <h2>@container</h2>
 
     <h3>Fluid Container:</h3>
-    <div>This is a fluid container and it will go till the end of the page.</div>
+    <div class="para">This is a fluid container and it will go till the end of the page.</div>
 
     <h3>Center Container:</h3>
     <div>This is a centered container and it will go till the specified width.</div>
